crates/nfctl-tui/tests/snapshots/frames__detail_bridges_true_crossings.snap
---
source: crates/nfctl-tui/tests/frames.rs
assertion_line: 240
expression: bridged
---
"┌ default/routing ─────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│phase Running   health unknown   desired Running   isb default                                                        │"
"│                                                                                                                      │"
"│┌ flow ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││                                                                                                                    ││"
"││                                                            ┌──────────────────────┐                                ││"
"││                                                            │b1  map               │                                ││"
"││                                                        ┌──▶│-  pending -          │─┐                              ││"
"││                                                        │   │                      │ │                              ││"
"││                               ┌──────────────────────┐ │   └──────────────────────┘ │                              ││"
"││                               │a  map                │ │                            │                              ││"
"││                           ┌──▶│-  pending -          │─┤   ┌──────────────────────┐ │                              ││"
"││  ┌──────────────────────┐ │   │                      │ │   │b2  map               │ │   ┌──────────────────────┐   ││"
"││  │src  source           │ │   └──────────────────────┘ ├──▶│-  pending -          │─┤   │sink  sink            │   ││"
"││  │-  pending -          │─┤                            │   │                      │ ├──▶│-  pending -          │   ││"
"││  │                      │ │   ┌──────────────────────┐ │   └──────────────────────┘ │   │                      │   ││"
"││  └──────────────────────┘ │   │p  map                │ │                            │   └──────────────────────┘   ││"
"││                           └──▶│-  pending -          │─│╶───────────────────────────┤                              ││"
"││                               │                      │ │                            │                              ││"
"││                               └──────────────────────┘ │   ┌──────────────────────┐ │                              ││"
"││                                                        │   │b3  map               │ │                              ││"
"││                                                        └──▶│-  pending -          │─┘                              ││"
"││                                                            │                      │                                ││"
"││                                                            └──────────────────────┘                                ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ edges ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││EDGE                                                          TAGS                       PENDING  USAGE    WATERMARK││"
"││src -> a                                                                                 -        -        -        ││"
"││src -> p                                                                                 -        -        -        ││"
"││a -> b1                                                                                  -        -        -        ││"
"││a -> b2                                                                                  -        -        -        ││"
"││a -> b3                                                                                  -        -        -        ││"
"││p -> sink                                                                                -        -        -        ││"
"││b1 -> sink                                                                               -        -        -        ││"
"││b2 -> sink                                                                               -        -        -        ││"
"││b3 -> sink                                                                               -        -        -        ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│warning: health: daemon: no health configured                                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
