crates/nfctl-tui/tests/snapshots/frames__detail_collapses_shards_by_default.snap
---
source: crates/nfctl-tui/tests/frames.rs
assertion_line: 366
expression: "frame(&panel, 110, 32)"
---
"┌ default/sharded ───────────────────────────────────────────────────────────────────────────────────────────┐"
"│phase Running   health healthy   desired Running   isb default   Pipeline data flow is healthy              │"
"│┌ flow ────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││                                                                                                          ││"
"││                                                                                                          ││"
"││                                            ┌───────────────┐     ┌───────────────┐             1 more ▶  ││"
"││                                            │worker ×3  map │     │merge  map     │                       ││"
"││                                        ┌──▶│900.0/s pend 36│────▶│900.0/s pend 12│────▶                  ││"
"││┌───────────────┐     ┌───────────────┐ │   │shard-*        │     │               │                       ││"
"│││in  source     │     │router  map    │─┘   └───────────────┘     └───────────────┘                       ││"
"│││900.0/s pend 12│────▶│900.0/s pend 12│─┐                                                                 ││"
"│││               │     │               │ │   ┌───────────────┐                                             ││"
"││└───────────────┘     └───────────────┘ │   │audit  sink    │                                             ││"
"││                                        └──▶│45.0/s pend 12 │                                             ││"
"││                                            │audit          │                                             ││"
"││                                            └───────────────┘                                             ││"
"││                                                                                                          ││"
"││                                                                                                          ││"
"│└──────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ edges ───────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││EDGE                                                  TAGS                   PENDING  USAGE    WATERMARK  ││"
"││in -> router                                                                 12       0%       -          ││"
"││router -> worker-0                                    shard-0                12       0%       -          ││"
"││router -> worker-1                                    shard-1                12       0%       -          ││"
"││router -> worker-2                                    shard-2                12       0%       -          ││"
"││worker-0 -> merge                                                            12       0%       -          ││"
"││worker-1 -> merge                                                            12       0%       -          ││"
"││worker-2 -> merge                                                            12       0%       -          ││"
"││merge -> out                                                                 12       0%       -          ││"
"││router -> audit                                       audit                  12       0%       -          ││"
"│└──────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
