crates/nfctl-tui/tests/snapshots/frames__detail_expands_shards_on_x.snap
---
source: crates/nfctl-tui/tests/frames.rs
assertion_line: 207
expression: "frame(&panel, 110, 30)"
---
"┌ default/sharded ───────────────────────────────────────────────────────────────────────────────────────────┐"
"│phase Running   health healthy   desired Running   isb default                                              │"
"│Pipeline data flow is healthy                                                                               │"
"│┌───────────────┐     ┌───────────────┐     ┌───────────────┐     ┌───────────────┐     ┌───────────────┐   │"
"││in  source     │────▶│router  map    │──┬─▶│worker-0  map  │──┬─▶│merge  map     │────▶│out  sink      │   │"
"││900.0/s pend 12│     │900.0/s pend 12│  │  │300.0/s pend 12│  │  │900.0/s pend 12│     │900.0/s pend 12│   │"
"│└───────────────┘     └───────────────┘  │  │shard-0        │  │  └───────────────┘     └───────────────┘   │"
"│                                         │  └───────────────┘  │                                            │"
"│                                         │  ┌───────────────┐  │                                            │"
"│                                         ├─▶│worker-1  map  │──┤                                            │"
"│                                         │  │300.0/s pend 12│  │                                            │"
"│                                         │  │shard-1        │  │                                            │"
"│                                         │  └───────────────┘  │                                            │"
"│                                         │  ┌───────────────┐  │                                            │"
"│                                         ├─▶│worker-2  map  │──┘                                            │"
"│                                         │  │300.0/s pend 12│                                               │"
"│                                         │  │shard-2        │                                               │"
"│                                         │  └───────────────┘                                               │"
"│                                         │  ┌───────────────┐                                               │"
"│                                         └─▶│audit  sink    │                                               │"
"│                                            │45.0/s pend 12 │                                               │"
"│                                            │audit          │                                               │"
"│                                            └───────────────┘                                               │"
"│EDGE                TAGS     PENDING  USAGE    WATERMARK                                                    │"
"│in -> router                 12       0%       -                                                            │"
"│router -> worker-0  shard-0  12       0%       -                                                            │"
"│router -> worker-1  shard-1  12       0%       -                                                            │"
"│router -> worker-2  shard-2  12       0%       -                                                            │"
"│worker-0 -> merge            12       0%       -                                                            │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
