crates/nfctl-tui/tests/snapshots/frames__detail_panel_with_cards.snap
---
source: crates/nfctl-tui/tests/frames.rs
assertion_line: 64
expression: "frame(&panel, 110, 34)"
---
"┌ default/fanout ────────────────────────────────────────────────────────────────────────────────────────────┐"
"│phase Running   health warning   desired Running   isb default                                              │"
"│Buffer usage above the warning threshold on 1 edge                                                          │"
"│                                                          ┌──────────────────────┐                          │"
"│                                                          │even-sink  sink       │                          │"
"│                                                       ┌─▶│120.0/s  pending 3    │                          │"
"│                                                       │  │even-tag              │                          │"
"│                                                       │  └──────────────────────┘                          │"
"│                                                       │                                                    │"
"│┌──────────────────────┐     ┌──────────────────────┐  │  ┌──────────────────────┐                          │"
"││in  source            │     │even-or-odd  map      │  │  │odd-sink  sink        │                          │"
"││120.0/s  pending 3    │────▶│120.0/s  pending 3    │──┼─▶│120.0/s  pending 3    │                          │"
"││                      │     │                      │  │  │odd-tag               │                          │"
"│└──────────────────────┘     └──────────────────────┘  │  └──────────────────────┘                          │"
"│                                                       │                                                    │"
"│                                                       │  ┌──────────────────────┐                          │"
"│                                                       │  │all-sink  sink        │                          │"
"│                                                       └─▶│120.0/s  pending 3    │                          │"
"│                                                          │even-tag, odd-tag     │                          │"
"│                                                          └──────────────────────┘                          │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│EDGE                                           TAGS                              PENDING  USAGE    WATERMARK│"
"│in -> even-or-odd                                                                3        0%       -        │"
"│even-or-odd -> even-sink                       even-tag                          3        0%       -        │"
"│even-or-odd -> odd-sink                        odd-tag                           3        0%       -        │"
"│even-or-odd -> all-sink                        even-tag, odd-tag                 3        0%       -        │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
