crates/nfctl-tui/tests/snapshots/frames__detail_routes_every_edge.snap
---
source: crates/nfctl-tui/tests/frames.rs
assertion_line: 168
expression: "frame(&panel, 120, 30)"
---
"┌ default/routing ─────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│phase Running   health unknown   desired Running   isb default                                                        │"
"│                                                                                                                      │"
"│                                                                                                ┌─────────────────┐   │"
"│                                                ┌─────────────────┐     ┌─────────────────┐     │sink-a  sink     │   │"
"│┌─────────────────┐     ┌─────────────────┐     │hot ×2  map      │     │cold  map        │  ┌─▶│- pend -         │   │"
"││src  source      │     │shard  map       │  ┌─▶│- pend -         │────▶│- pend -         │─┬┤  └─────────────────┘   │"
"││- pend -         │──┬─▶│- pend -         │──┤  └─────────────────┘     └─────────────────┘ ││  ┌─────────────────┐   │"
"│└─────────────────┘  │  └─────────────────┘  └──────────────────────────────────────────────┼┤  │sink-b  sink     │   │"
"│                     │                                                                      │└─▶│- pend -         │   │"
"│                     │                                                                      │   └─────────────────┘   │"
"│                     └──────────────────────────────────────────────────────────────────────┘                         │"
"│EDGE             TAGS  PENDING  USAGE    WATERMARK                                                                    │"
"│src -> shard           -        -        -                                                                            │"
"│shard -> hot-0         -        -        -                                                                            │"
"│shard -> hot-1         -        -        -                                                                            │"
"│hot-0 -> cold          -        -        -                                                                            │"
"│hot-1 -> cold          -        -        -                                                                            │"
"│cold -> sink-a         -        -        -                                                                            │"
"│cold -> sink-b         -        -        -                                                                            │"
"│shard -> sink-b        -        -        -                                                                            │"
"│cold -> shard          -        -        -                                                                            │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│warning: health: daemon: no health configured                                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
