crates/nfctl-tui/tests/snapshots/frames__monovertex_panel.snap
---
source: crates/nfctl-tui/tests/frames.rs
expression: "frame(&panel, 100, 16)"
---
"┌ monovertex default/mono ─────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                         phase Running   health healthy   desired Running                         │"
"│                                  MonoVertex data flow is healthy                                 │"
"│                                                                                                  │"
"│                          ╭─ ×1 ──────────────────────────────────────╮                           │"
"│                          │                   mono                    │                           │"
"│                          │                                           │                           │"
"│                          │   source ──▶ transform ──▶ map ──▶ sink   │                           │"
"│                          │                                           │                           │"
"│                          ╰───────────────── 53840.0/s · 479 pending ─╯                           │"
"│                                                                                                  │"
"│                           rate/1m 53840.0   rate/5m 58195.3   ready 1/1                          │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
