crates/nfctl-tui/tests/snapshots/frames__monovertex_panel_narrow.snap
---
source: crates/nfctl-tui/tests/frames.rs
expression: "frame(&panel, 56, 16)"
---
"┌ monovertex default/enrich ───────────────────────────┐"
"│                                                      │"
"│   phase Running   health warning   desired Running   │"
"│          MonoVertex is not fully replicated          │"
"│                                                      │"
"│     ╭─ ×2/3 ──────────────────────────────────╮      │"
"│     │                 enrich                  │      │"
"│     │                                         │      │"
"│     │   src ──▶ trf ──▶ map ──▶ sink ╌╌▶ fb   │      │"
"│     │                                         │      │"
"│     ╰─────────────── 6753.2/s · 9553 pending ─╯      │"
"│                                                      │"
"│      rate/1m 6753.2   rate/5m 6900.2   ready 2/3     │"
"│                                                      │"
"│                                                      │"
"└──────────────────────────────────────────────────────┘"
