crates/nfctl-tui/tests/snapshots/frames__pipelines_panel.snap
---
source: crates/nfctl-tui/tests/frames.rs
assertion_line: 37
expression: "frame(&panel, 100, 12)"
---
"┌ pipelines (all namespaces) ──────────────────────────────────────────────────────────────────────┐"
"│NAMESPACE  NAME        PHASE    VERTICES  DESIRED  MESSAGE                                        │"
"│default    fanout      Running  5         Running                                                 │"
"│default    linear      Running  3         Running                                                 │"
"│default    partitions  Running  3         Running                                                 │"
"│default    scaling     Running  3         Running                                                 │"
"│default    sharded     Running  8         Running                                                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
